feat: fixed typo

--- a/src/SprykerCommunity/Zed/DatabaseConfiguration/Presentation/Edit/index.twig
+++ b/src/SprykerCommunity/Zed/DatabaseConfiguration/Presentation/Edit/index.twig
@@ -6,7 +6,7 @@
 {% block section_title widget_title | trans %}
 
 {% block action %}
-    {{ backActionButton(url('/database-configuration/list'), 'Back to Database Configurations' | trans) }}
+    {{ backActionButton(url('/database-configuration/list'), 'Back to Database Configuration' | trans) }}
 {% endblock %}
 
 {% block content %}
